fixed alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   height: 75vh;
-  width: 25vw;
+  width: 27vw;
   padding: 10px;
   /* border: 2px solid black; */
   border-radius: 15px;
