--- a/utility.css
+++ b/utility.css
@@ -35,10 +35,10 @@
         font-size: large;
     }
 }
-@media (min-width:800px) and (max-width:1024px)  {
+@media (min-width:800px) and (max-width:1100px)  {
     #main{
-        height: 70vh;
-        width: 50vw;
+        height: 75vh;
+        width: 30vw;
     }
     
 }
